修复配置文件